--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<encoding>UTF-8</encoding>
 		<jdk>1.7</jdk>
 		<skipTests>true</skipTests>
+    <jackson.version>[2.9.9.2,)</jackson.version>
 	</properties>
 
 	<dependencies>
@@ -40,12 +41,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
-			<version>2.7.1</version>
+			<version>${jackson.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.7.1</version>
+			<version>${jackson.version}</version>
 		</dependency>
     <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
     <dependency>
